--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Download big files, pauses downloads and resume them and verify integrity.",
   "main": "dist/index.js",
   "dependencies": {
+    "byte-size": "^7.0.1",
     "es6-promise-pool": "^2.5.0",
     "node-fetch": "^2.6.1",
     "typescript": "^4.2.4"
@@ -11,7 +12,8 @@
   "devDependencies": {
     "@types/node": "14.14.25",
     "@types/node-fetch": "^2.5.10",
-    "mocha": "^8.3.2"
+    "mocha": "^8.3.2",
+    "modernlog": "^1.0.1"
   },
   "scripts": {
     "test": "mocha",
