--- a/package.json
+++ b/package.json
@@ -26,5 +26,5 @@
     "url": "https://github.com/JeanOUINA/bongodl"
   },
   "author": "JeanOUINA",
-  "license": "MIT"
+  "license": "UNLISENCED"
 }
