--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "dependencies": {
     "byte-size": "^7.0.1",
     "es6-promise-pool": "^2.5.0",
-    "node-fetch": "^2.6.1",
-    "typescript": "^4.2.4"
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "@types/node": "14.14.25",
     "@types/node-fetch": "^2.5.10",
     "mocha": "^8.3.2",
-    "modernlog": "^1.0.1"
+    "modernlog": "^1.0.1",
+    "typescript": "^4.2.4"
   },
   "scripts": {
     "test": "mocha",
